--- a/overrides/main.html
+++ b/overrides/main.html
@@ -13,5 +13,9 @@
 
 <!-- content block -->
 {% block content %}
+  <!-- Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3917728632267850"
+  crossorigin="anonymous"></script>
+  <!-- End Google AdSense Code -->
   {{ super() }}
 {% endblock %}
